--- a/index.html
+++ b/index.html
@@ -17,4 +17,14 @@
             Zombies
         </a>
     </li>
+    <li>
+        <a href="5minos/index.html">
+            Visualization of Pentominoes 5x4x3 Solution 
+        </a>
+    </li>
+    <li>
+        <a href="stars/index.html">
+            Visualization of the sky, featuring 5000 stars plus sun and moon
+        </a>
+    </li>
 </ul>
