--- a/5minos/index.html
+++ b/5minos/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Pentomino Solution</title>
-<script type="text/javascript" src="three.js"></script>
+<script type="text/javascript" src="Three.js"></script>
 <script type="text/javascript" src="OrbitControls.js"></script>
 <style>
 body { margin: 0; padding: 0; font-family: "Georgia", serif; color: #444; }
